src/objects/project__c.object
<CustomObject>
    <fields>
        <fullName>book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>book</label>
        <referenceTo>book__c</referenceTo>
        <relationshipLabel>projects</relationshipLabel>
        <relationshipName>projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <picklist>
            <controllingField>state__c</controllingField>
            <picklistValues>
                <fullName>MARKAPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hyd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>up1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mp1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hp1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pak10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>us10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>aus10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <picklist>
            <picklistValues>
                <fullName>aus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>india</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>usa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>department</label>
        <referenceTo>department__c</referenceTo>
        <relationshipLabel>projects</relationshipLabel>
        <relationshipName>projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>employee101__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>employee</label>
        <referenceTo>employees__c</referenceTo>
        <relationshipLabel>projects</relationshipLabel>
        <relationshipName>projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>p_duration__c</fullName>
        <label>p-duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>p_location__c</fullName>
        <label>p-location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <picklist>
            <controllingField>country__c</controllingField>
            <picklistValues>
                <fullName>ap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>aus1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>aus2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>aus3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pak1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pak2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pak3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>us1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>us2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>us3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>